# vision_test

./: .env  README.md  main.py  pyproject.toml
app/: config.py
app/controllers/: app_manager.py  pages.py  websocket.py
app/services/: app_manager.py  connection_manager.py  schemas.py
app/services/database/: base.py  dao.py
app/services/database/models/: apps.py  apps_journal.py
app/templates/: index.html
